<resources>
    <string name="app_name">Sohni Dharti</string>
    <string name="channel_id" translatable="false">NRLP Notifications Channel</string>
    <string name="register_an_account">Register an Account</string>
    <string name="full_name">Full Name as per CNIC/NICOP/POC *</string>
    <string name="full_name_as_per_cnic">Full Name as per CNIC/NICOP/POC *</string>
    <string name="mother_maiden_name">Mother Maiden Name *</string>
    <string name="place_of_birth">Place of Birth *</string>
    <string name="title_place_of_birth">Place of Birth</string>
    <string name="cnic_nicop_number">CNIC/NICOP/POC *</string>
    <string name="cnic_nicop_number_complaint">CNIC/NICOP/POC</string>
    <string name="cnic_nicop_issuance_date">CNIC/NICOP/POC Issuance Date *</string>
    <string name="country">Country of Residence *</string>
    <string name="country_complaint">Country of Residence</string>
    <string name="passport_no">Passport No. *</string>
    <string name="select_passport_no">Enter Passport No.</string>
    <string name="passport_type">Passport Type *</string>
    <string name="select_passport_type">Select Passport Type</string>
    <string name="enter_residence_country">Please select your Residence Country </string>
    <string name="help_mobile_number">Please enter your Mobile Number</string>
    <string name="help_passport_type">Please select your passport type</string>
    <string name="help_passport_no">Please enter your passport number</string>
    <string name="help_unique_id">Please enter the unique ID you use for sending remittance to Pakistan through your bank or Money Transfer agent, including any  ID provided by your country of residence (Iqama No, Registration No., Emirati ID, Driving License, etc.)</string>
    <string name="help_password">Please enter a Password</string>
    <string name="help_confirm_password">Please re-enter the Password </string>
    <string name="help_user_type">Please select if you are a Remitter (Sender) Or Beneficiary (Receiver) of remittance funds</string>
    <string name="help_full_name">Please enter your Full Name as per CNIC/NICOP/POC</string>
    <string name="help_usd">The Annual Remittance to date in USD is accumulated from 1st July of each year.</string>
    <string name="help_father_name">Please enter your Father Name as per CNIC/NICOP/POC</string>
    <string name="resident_id">Unique ID *</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="mobile_number_not_mandatory">Mobile Number</string>
    <string name="mobile_number_complaint">Mobile Number</string>
    <string name="beneficiary_mobile_number">Beneficiary Mobile Number *</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="password">Password *</string>
    <string name="new_password">New Password</string>
    <string name="select_bene">Select Beneficiary</string>
    <string name="remitter_trans_ref_no">Remitter Transaction Reference No./TT No.</string>
    <string name="remittance_amount">Remittance Amount (In PKR)</string>
    <string name="remittance_amount_help">Enter exact amount as per your transaction receipt</string>
    <string name="remittance_date_help">Enter date on which remittance is sent</string>
    <string name="remittance_account_cnic_number_help">Please enter following details of remittance receiver in Pakistan  \n1. In case of receiving cash-CNIC \n2. In case of credits in bank account-complete bank account no.</string>
    <string name="remittance_date">Date of Remittance</string>
    <string name="enter_points">Enter Points</string>
    <string name="re_enter_password">Re-Enter Password *</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="account_type">User Type *</string>
    <string name="beneficiary_relationship">Beneficiary Relationship *</string>
    <string name="select_account">Select account</string>
    <string name="generic_name_placeholder">Muhammad Ali</string>
    <string name="mother_maiden_name_placeholder">Kaneez Fatima</string>
    <string name="generic_date_placeholder">14-Aug-47</string>
    <string name="nlrp_title">Sohni Dharti\nRemittance Program</string>
    <string name="select_account_type">Select User Type</string>
    <string name="select_beneficiary_relationship">Select Beneficiary Relationship</string>
    <string name="login">Login</string>
    <string name="remitter">Remitter</string>
    <string name="international_passport">International Passport</string>
    <string name="pakistani_passport">Pakistani Passport</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="child">Child</string>
    <string name="friend">Friend</string>
    <string name="spouse">Spouse</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="transfer">Transfer</string>
    <string name="loyalty_points">Loyalty points</string>
    <string name="current_point_balance">Current Point Balance</string>
    <string name="welcome">Welcome,</string>
    <string name="mng_bene">Manage Beneficiaries</string>
    <string name="mng_pnts">Manage Points</string>
    <string name="view_stmnt">View Statement</string>
    <string name="view_statements">View Statements</string>
    <string name="dummy_name">Talha Naveed</string>
    <string name="dummy_amount">7,389</string>
    <string name="remitter_verification">Remitter Verification</string>
    <string name="beneficiary_verification_title">Beneficiary Verification</string>
    <string name="reference_number">Transaction Reference No./TT No.</string>
    <string name="beneficiary_account_number_cnic">Beneficiary CNIC</string>
    <string name="beneficiary_account_number_cnic_complaint">Beneficiary Account Number/IBAN/CNIC/POC</string>
    <string name="beneficiary_account_number">Beneficiary Account Number/IBAN</string>
    <string name="beneficiary_passport_number">Beneficiary Passport Number</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="curPassword">Enter Old Password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirmPassword">Re-enter New Password</string>
    <string name="enter_remittance_transaction_num_msg">Enter your remittance transaction reference number.</string>
    <string name="enter_remittance_transaction_num_msg_self_award">Enter your remittance transaction reference number.</string>
    <string name="transaction_eligibity_for_self_award">Enter Reference Number/TT Number as per your transaction receipt</string>
    <string name="sent_otp_code_msg">We have sent you OTP on your registered mobile number, please enter the OTP below;</string>
    <string name="lorem_ipsum_text_large" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum./\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="update_successful">Update Successful</string>
    <string name="dashboard">Dashboard</string>
    <string name="update_successful_message">You have successfully updated your password.</string>
    <string name="points_transfer_successful">Points Transferred Successfully</string>
    <string name="register_success_msg_remitter">Thank you for registering as a Remitter for Sohni Dharti Remittance Program.</string>
    <string name="you_have_successfully_transfered">You have successfully transferred %1$d points to %2$s.</string>
    <string name="register_success_msg_beneficiary">Thank you for registering as a Beneficiary for Sohni Dharti Remittance Program.</string>
    <string name="done">Done</string>
    <string name="register">Register</string>
    <string name="reference_num_hint">xxxxxxxxxxxxxx</string>
    <string name="agent_code_hint">xxxxxx</string>
    <string name="new_pass_hint">e.g. P@kistan$555</string>
    <string name="cnic_nicop_hint">xxxxx–xxxxxxx–x</string>
    <string name="select_country">Select Country</string>
    <string name="mobile_num_hint">xxx xxxx xxx</string>
    <string name="code_prefix">xx</string>
    <string name="cancel">Cancel</string>
    <string name="dash">&#160;&#032;-&#032;</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="agent_confirmation_msg">Please request the agent to input their 6 digit redemption code.</string>
    <string name="code_expire_msg">Code will expire in</string>
    <string name="otp_timer_place_holder">04:59</string>
    <string name="enter_code">Please enter the code below</string>
    <string name="resend_registration_code">Resend Registration Code</string>
    <string name="add_receiver">Add Receiver</string>
    <string name="remittance_to_cnic">Remittance sent to CNIC</string>
    <string name="remittance_to_bank">Remittance sent to Bank Account</string>
    <string name="receivers_maximum_note">Note: You can add maximum 5 receivers.</string>
</resources>